Closed Bug 1741398 Opened 3 years ago Closed 3 years ago

Windows "ScrollbarDrawing.h(43,10): error: cannot combine with previous 'bool' declaration specifier" bustage with Windows 10 SDK 19041

Categories

(Core :: Widget: Win32, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox94 --- unaffected
firefox95 --- unaffected
firefox96 --- fixed

People

(Reporter: RyanVM, Assigned: spohl)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

 4:07.71 In file included from Unified_cpp_widget3.cpp:56:
 4:07.71 In file included from C:/Users/Ryan/repos/mozilla/widget/nsXPLookAndFeel.cpp:19:
 4:07.71 In file included from C:/Users/Ryan/repos/mozilla/widget/nsNativeBasicTheme.h:16:
 4:07.71 C:/Users/Ryan/repos/mozilla/widget/ScrollbarDrawing.h(43,10): error: cannot combine with previous 'bool' declaration specifier
 4:07.71     bool small = false;
 4:07.71          ^
 4:07.71 C:\Program Files (x86)\Windows Kits\10\include\10.0.19041.0\shared/rpcndr.h(190,15): note: expanded from macro 'small'
 4:07.71 #define small char
 4:07.71               ^
Flags: needinfo?(spohl.mozilla.bugs)
Assignee: nobody → spohl.mozilla.bugs
Flags: needinfo?(spohl.mozilla.bugs)
Status: NEW → ASSIGNED
Pushed by spohl@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/499f031507f2
Fix build issues due to scrollbar refactor with Windows 10 SDK 19041. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: