Bug 1741398: Fix build issues due to scrollbar refactor with Windows 10 SDK 19041. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D131265